--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.0.1
 click==8.1.3
@@ -17,4 +18,4 @@ pygame==2.1.2
 requests==2.31.0
 tqdm==4.64.1
 urllib3==1.26.14
-Werkzeug==2.2.2
+Werkzeug==2.3.6
