--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-blinker==1.6.2
-certifi==2023.7.22
-charset-normalizer==3.0.1
-click==8.1.3
-decorator==4.4.2
-Flask==2.3.2
-idna==3.4
-imageio==2.25.0
-imageio-ffmpeg==0.4.8
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-moviepy==1.0.3
-numpy==1.24.1
-Pillow==10.2.0
-proglog==0.1.10
-pygame==2.1.2
-requests==2.31.0
-tqdm==4.64.1
-urllib3==1.26.14
-Werkzeug==2.3.6
+blinker  
+certifi  
+charset-normalizer  
+click  
+decorator  
+Flask  
+idna  
+imageio  
+imageio-ffmpeg  
+itsdangerous  
+Jinja2  
+MarkupSafe  
+moviepy  
+numpy  
+Pillow  
+proglog  
+pygame  
+requests  
+tqdm  
+urllib3  
+Werkzeug
